[tool.poetry]
name = "carp"
version = "0.1.0"
description = "Asyncio-based RPC tools"
authors = ["Bill Gribble <grib@billgribble.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
